fix: resolve polymorphic deserialization issue by configuring ObjectMapper with JavaTimeModule and converting list return types to ArrayList